# snake-py

./: .gitignore  README.md  pyproject.toml  theme.json
src/snake/: __main__.py  reset_screen.py  score.py
test/: test_snake.py
