[tool.poetry]
name = "snake"
version = "1.0.0"
description = "A python implementation of Snake."
authors = ["Zageron <hello@adambryant.ca>"]
license = "AGPL-3.0"

packages = [{ include = "snake", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10.1"
pygame = "^2.1.2"
pygame-gui = "^0.6.0"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"
black = "^21.12b0"
pytest = "^6.2.5"
nuitka = "^0.6.17.4"
zstandard = "^0.16.0"

[tool.poetry.scripts]
my-project = "snake.snake:run"

[tool.pyright]
include = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
