[tool.poetry]
name = "snake"
version = "1.0.0"
description = "A python implementation of Snake."
authors = ["Zageron <hello@adambryant.ca>"]
license = "AGPL-3.0"

packages = [{ include = "snake", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10.5"
pygame = "^2.1.2"
pygame-gui = "^0.6.4"
numpy = "^1.23.4"
typing-extensions = "^4.4.0"


[tool.poetry.dev-dependencies]
pylint = "^2.15.4"
black = "^22.10.0"
pytest = "^7.1.3"
zstandard = "^0.18.0"
flake8 = "^5.0.4"
Nuitka = "^1.1.5"
ordered-set = "^4.1.0"

[tool.poetry.scripts]
my-project = "snake.snake:run"

[tool.pyright]
include = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
